@@ -168,3 +168,4 @@ Entity中toVo区别是否忽略大小写
 
 2.13.1
 1、FileUtil增加方法判断目录是否为空
+2、SecureUtil增加simpleUUID方法
